# retroshade

./: .gitmodules
examples/deposit/: Cargo.toml
examples/deposit/src/: lib.rs  test.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: lib.rs
examples/soroban-insurance-factory/: Cargo.toml
examples/soroban-insurance-factory/src/: lib.rs
examples/storage/: Cargo.toml
examples/storage/src/: lib.rs  test.rs
examples/storage/test_snapshots/test/: test.1.json
retroshade/: Cargo.toml
retroshade/src/: conversion.rs  internal.rs  lib.rs  snapshot.rs  state.rs  test.rs  testutils.rs
retroshade/src/test/: deployer.rs  simple.rs  storage.rs
