[package]
name = "retroshade"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
soroban-env-host = { git = "https://github.com/xycloo/retroshades-svm-fork", features = [
    "testutils",
    "recording_mode",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.31.0"
#tokio = { version = "1", features = ["full"] }
sha2 = "0.10.8"
rand = "0.8.5"
stellar-strkey = "0.0.8"
postgres-types = "0.2.7"
hex = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2"
log = "0.4.20"
