[package]
name = "soroban-hello-world-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = ["mercury"]
mercury = ["dep:retroshade-sdk"]

[dependencies]
soroban-sdk = { version = "21.4.0" }
retroshade-sdk = { version = "0.1.0", optional = true }

[dev-dependencies]
soroban-sdk = { version = "21.4.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
